[B]1.1.4[/B]
- fixed: posts and fanarts url changed

[B]1.1.3[/B]
- fixed: can't install due to obsolete requires

[B]1.1.2[/B]
- fixed: api changed to https

[B]1.1.1[/B]
- fixed: posts and fanarts url changed

[B]1.1.0[/B]
- changed: use themoviedb posters instead of MoviePosterDB

[B]1.0.9[/B]
- fixed: can't get search list and informations due to API change
- fixed: need set Referer to get posts and fanarts

[B]1.0.8[/B]
- fixed: can't get search list due to API change
- fixed: can't get cast infomation
- fixed: scrape error under OSX

[B]1.0.7[/B]
- changed: use douban API v2 search
- added: get country
- added: get writer
- fixed: can't get posts and fanarts because site change

[B]1.0.6[/B]
- fixed: can't get full information by imdb id (nfo)

[B]1.0.5[/B]
- fixed: support decimal in rating

[B]1.0.4[/B]
- changed: treat search results as sorted
- updated: support MoviePosterDB posters and themoviedb fanarts again
- added: option to get trailer

[B]1.0.3[/B]
- updated: to use douban API v2

[B]1.0.2[/B]
- fixed: some chinese movie can't get title

[B]1.0.1[/B]
- fixed: can't get search results

[B]1.0.0[/B]
- Initial version