@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.douban.com"
        name="douban"
-       version="1.1.5"
+       version="1.1.6"
        provider-name="Taxigps">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
