@@ -76,8 +76,8 @@
 			<RegExp input="$$1" output="\1" dest="8">
 				<expression noclean="1" clear="yes" fixchars="1">&quot;casts&quot;: \[(.+?)\]</expression>
 			</RegExp>
-			<RegExp input="$$8" output="&lt;actor&gt;&lt;thumb&gt;http://\2/img/celebrity/large/\3.jpg&lt;/thumb&gt;&lt;name&gt;\4&lt;/name&gt;&lt;/actor&gt;" dest="5+">
-				<expression noclean="1" repeat="yes">&quot;avatars&quot;: (null|.*?&quot;large&quot;: &quot;https://(.+?)\\/img\\/celebrity\\/large\\/(.+?).jpg&quot;[^\}]*\}), &quot;name&quot;: &quot;(.+?)&quot;</expression>
+			<RegExp input="$$8" output="&lt;actor&gt;&lt;thumb&gt;https://\2/view/celebrity/s_ratio_celebrity/public/\3.jpg&lt;/thumb&gt;&lt;name&gt;\4&lt;/name&gt;&lt;/actor&gt;" dest="5+">
+				<expression noclean="1" repeat="yes">&quot;avatars&quot;: (null|.*?&quot;large&quot;: &quot;https://(.+?)\\/view\\/celebrity\\/s_ratio_celebrity\\/public\\/(.+?).jpg&quot;[^\}]*\}), &quot;name&quot;: &quot;(.+?)&quot;</expression>
 			</RegExp>
 			<RegExp input="$$2" output="&lt;url cache=&quot;\1-poster.html&quot; function=&quot;GetPoster&quot;&gt;https://movie.douban.com/subject/\1/photos?type=R&lt;/url&gt;" dest="5+">
 				<expression/>
